Update ClientId to client version

--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -319,7 +319,7 @@
                 }
             ],
             "parameters": {
-                "clientId": "AC"
+                "clientVersion": "AC"
             }
         }
     ],
