--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -297,7 +297,7 @@
                 }
             ],
             "parameters": {
-                "clientId": "AC"
+                "clientVersion": "AC"
             }
         }
     ]
