--- a/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
+++ b/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <Title>Catalyst CLI</Title>
@@ -31,6 +31,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
         <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
+        <PackageReference Include="Nito.Comparers" Version="6.0.0" />
         <PackageReference Include="Serilog" Version="2.8.0" />
         <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.4" />
         <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
