Remove advanced shell from tests

--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -9,6 +9,15 @@
                 }
             ]
         },
+        // Start Commands
+        {
+            "type": "Catalyst.Cli.Commands.AddFileCommand",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                }
+            ]
+        },
         {
             "type": "Catalyst.Cli.Commands.ConnectCommand",
             "services": [
@@ -18,7 +27,63 @@
             ]
         },
         {
-            "type": "Catalyst.Cli.Commands.GetVersionCommands",
+            "type": "Catalyst.Cli.Commands.DisconnectCommand",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Cli.Commands.GetFileCommand",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Cli.Commands.GetInfoCommand",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Cli.Commands.GetMempoolCommand",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Cli.Commands.GetVersionCommand",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Cli.Commands.MessageSignCommand",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Cli.Commands.MessageVerifyCommand",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Cli.Commands.PeerBlackListingCommand",
             "services": [
                 {
                     "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
@@ -34,13 +99,30 @@
             ]
         },
         {
-            "type": "Catalyst.Cli.Commands.Commands",
+            "type": "Catalyst.Cli.Commands.PeerListCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.IShell, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
                 }
             ]
         },
+        {
+            "type": "Catalyst.Cli.Commands.PeerRemoveCommand",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Cli.Commands.PeerReputationCommand",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                }
+            ]
+        },
+        //End Commands
         {
             "type": "Catalyst.Common.IO.EventLoop.EventLoopGroupFactoryConfiguration, Catalyst.Common",
             "services": [
