--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -14,7 +14,7 @@
             "type": "Catalyst.Cli.Commands.AddFileCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -22,7 +22,7 @@
             "type": "Catalyst.Cli.Commands.ConnectCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -30,7 +30,7 @@
             "type": "Catalyst.Cli.Commands.DisconnectCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -38,7 +38,7 @@
             "type": "Catalyst.Cli.Commands.GetFileCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -46,7 +46,7 @@
             "type": "Catalyst.Cli.Commands.GetInfoCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -54,7 +54,7 @@
             "type": "Catalyst.Cli.Commands.GetMempoolCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -62,7 +62,7 @@
             "type": "Catalyst.Cli.Commands.GetVersionCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -70,7 +70,7 @@
             "type": "Catalyst.Cli.Commands.MessageSignCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -78,7 +78,7 @@
             "type": "Catalyst.Cli.Commands.MessageVerifyCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -86,7 +86,7 @@
             "type": "Catalyst.Cli.Commands.PeerBlackListingCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -94,7 +94,7 @@
             "type": "Catalyst.Cli.Commands.PeerCountCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -102,7 +102,7 @@
             "type": "Catalyst.Cli.Commands.PeerListCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -110,7 +110,7 @@
             "type": "Catalyst.Cli.Commands.PeerRemoveCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
@@ -118,7 +118,7 @@
             "type": "Catalyst.Cli.Commands.PeerReputationCommand",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Cli.Commands.ICommand, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Cli.CommandTypes.ICommand, Catalyst.Common"
                 }
             ]
         },
