--- a/src/Catalyst.Cli.IntegrationTests/Catalyst.Cli.IntegrationTests.csproj
+++ b/src/Catalyst.Cli.IntegrationTests/Catalyst.Cli.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <RootNamespace>Catalyst.Cli.IntegrationTests</RootNamespace>
@@ -10,6 +10,8 @@
     <Import Project="../Common.IntegrationTests.props" />
     <ItemGroup>
         <ProjectReference Include="..\Catalyst.Cli\Catalyst.Cli.csproj" />
+        <ProjectReference Include="..\Catalyst.Common\Catalyst.Common.csproj" />
+        <ProjectReference Include="..\Catalyst.Node.Core.IntegrationTests\Catalyst.Node.Core.IntegrationTests.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Core\Catalyst.Node.Core.csproj" />
         <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
     </ItemGroup>
