--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -102,7 +102,7 @@
             "type": "Catalyst.Node.Core.RPC.NodeRpcServer",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Rpc.INodeRpcServer, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.RPC.INodeRpcServer, Catalyst.Common"
                 }
             ]
         },
@@ -118,7 +118,7 @@
             "type": "Catalyst.Node.Core.RPC.RpcServerSettings",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Rpc.IRpcServerSettings, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.RPC.IRpcServerSettings, Catalyst.Common"
                 }
             ]
         },
@@ -126,7 +126,7 @@
             "type": "Catalyst.Common.RPC.IO.Messaging.Correlation.RpcMessageCorrelationManager, Catalyst.Common",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.IO.Messaging.Correlation.IMessageCorrelationManager, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.RPC.IO.Messaging.Correlation.IRpcMessageCorrelationManager, Catalyst.Common"
                 }
             ]
         },
@@ -159,7 +159,7 @@
             "type": "Catalyst.Node.Core.RPC.Authentication.RepositoryAuthenticationStrategy",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Rpc.Authentication.IAuthenticationStrategy, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.RPC.Authentication.IAuthenticationStrategy, Catalyst.Common"
                 }
             ]
         },
@@ -199,7 +199,7 @@
             "type": "Catalyst.Node.Core.Rpc.Authentication.AuthCredentials",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Rpc.Authentication.IAuthCredentials, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.RPC.Authentication.IAuthCredentials, Catalyst.Common"
                 }
             ]
         },
