--- a/src/Catalyst.Common/Catalyst.Common.csproj
+++ b/src/Catalyst.Common/Catalyst.Common.csproj
@@ -11,7 +11,7 @@
     <Import Project="../Common.Projects.props" />
     <ItemGroup>
         <PackageReference Include="Catalyst.Cryptography.BulletProofs.Wrapper" Version="0.0.1.7468-beta" />
-        <PackageReference Include="Catalyst.Protocol" Version="0.0.1.6995-beta" />
+        <PackageReference Include="Catalyst.Protocol" Version="0.0.1.7864-beta" />
         <PackageReference Include="DotNetty.Codecs.Protobuf" Version="0.6.0" />
         <PackageReference Include="Ipfs.Api" Version="0.23.6" />
         <PackageReference Include="Ipfs.Core" Version="0.51.1" />
@@ -20,6 +20,7 @@
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
         <PackageReference Include="Multiformats.Hash" Version="1.4.0" />
+        <PackageReference Include="NBuilder" Version="6.0.0" />
         <PackageReference Include="Nethereum.KeyStore" Version="3.3.0" />
         <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
         <PackageReference Include="Polly" Version="7.1.0" />
