--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -204,10 +204,10 @@
             ]
         },
         {
-            "type": "Catalyst.Node.Core.P2P.PeerDiscovery",
+            "type": "Catalyst.Node.Core.P2P.Discovery.HastingsDiscovery",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.P2P.IPeerDiscovery, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.P2P.Discovery.IHastingsDiscovery, Catalyst.Common"
                 }
             ]
         },
@@ -228,10 +228,10 @@
             ]
         },
         {
-            "type": "Catalyst.Node.Core.P2P.PeerService",
+            "type": "Catalyst.Node.Core.P2P.PeerService`1[[Catalyst.Node.Core.P2P.Discovery.HastingsDiscovery, Catalyst.Node.Core]]",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.P2P.IPeerService, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.P2P.IPeerService`1[[Catalyst.Node.Core.P2P.Discovery.HastingsDiscovery, Catalyst.Node.Core]], Catalyst.Common"
                 }
             ]
         },
