--- a/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTests.csproj
+++ b/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTests.csproj
@@ -33,4 +33,7 @@
         <ProjectReference Include="..\Catalyst.Node.Core\Catalyst.Node.Core.csproj" />
         <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="P2P\Discovery" />
+    </ItemGroup>
 </Project>
