--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -228,10 +228,10 @@
             ]
         },
         {
-            "type": "Catalyst.Node.Core.P2P.PeerService`1[[Catalyst.Node.Core.P2P.Discovery.HastingsDiscovery, Catalyst.Node.Core]], Catalyst.Node.Core",
+            "type": "Catalyst.Node.Core.P2P.PeerService`1[[Catalyst.Common.Interfaces.P2P.Discovery.IHastingsDiscovery, Catalyst.Common]], Catalyst.Node.Core",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.P2P.IPeerService`1[[Catalyst.Common.Interfaces.P2P.Discovery.HastingsDiscovery, Catalyst.Node.Core]], Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.P2P.IPeerService`1[[Catalyst.Common.Interfaces.P2P.Discovery.IHastingsDiscovery, Catalyst.Common]], Catalyst.Common"
                 }
             ]
         },
