Cleaned up code until, pipeline issue for sending is fixed

--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -241,6 +241,16 @@
                 {
                     "type": "Catalyst.Common.Interfaces.P2P.IPeerValidator, Catalyst.Common"
                 }
+                //},
+                //{
+                //    "type": "Catalyst.Common.Interfaces.IO.Observers.IP2PMessageObserver, Catalyst.Common"
+                //},
+                //{
+                //    "type": "Catalyst.Common.Interfaces.IO.Observers.IRpcResponseObserver, Catalyst.Common"
+                //},
+                //{
+                //    "type": "Catalyst.Common.Interfaces.IO.Observers.IRpcRequestObserver, Catalyst.Common"
+                //}
             ]
         },
         {
