--- a/src/Common.Projects.props
+++ b/src/Common.Projects.props
@@ -5,6 +5,7 @@
         <PackageLicenseUrl>https://github.com/catalyst-network/Catalyst.Node/blob/master/LICENSE</PackageLicenseUrl>
         <PackageProjectUrl>https://github.com/catalyst-network/Catalyst.Node</PackageProjectUrl>
         <RepositoryUrl>https://github.com/catalyst-network/Catalyst.Node</RepositoryUrl>
+        <PackageIconUrl>$(MSBuildThisFileDirectory)../assets/logo.png</PackageIconUrl>
         <RepositoryType>git</RepositoryType>
         <RuntimeFrameworkVersion>2.2.1</RuntimeFrameworkVersion>
         <LangVersion>7.3</LangVersion>
