Implemented changes for picking up pingrequests and pingresponses

--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -235,24 +235,24 @@
                 }
             ]
         },
-        {
-            "type": "Catalyst.Node.Core.P2P.PeerValidator",
-            "services": [
-                {
-                    "type": "Catalyst.Common.Interfaces.P2P.IPeerValidator, Catalyst.Common"
-                }
-                //},
-                //{
-                //    "type": "Catalyst.Common.Interfaces.IO.Observers.IP2PMessageObserver, Catalyst.Common"
-                //},
-                //{
-                //    "type": "Catalyst.Common.Interfaces.IO.Observers.IRpcResponseObserver, Catalyst.Common"
-                //},
-                //{
-                //    "type": "Catalyst.Common.Interfaces.IO.Observers.IRpcRequestObserver, Catalyst.Common"
-                //}
-            ]
-        },
+        //{
+        //    "type": "Catalyst.Node.Core.P2P.PeerValidator",
+        //    "services": [
+        //        {
+        //            "type": "Catalyst.Common.Interfaces.P2P.IPeerValidator, Catalyst.Common"
+        //        }
+        //        //},
+        //        //{
+        //        //    "type": "Catalyst.Common.Interfaces.IO.Observers.IP2PMessageObserver, Catalyst.Common"
+        //        //},
+        //        //{
+        //        //    "type": "Catalyst.Common.Interfaces.IO.Observers.IRpcResponseObserver, Catalyst.Common"
+        //        //},
+        //        //{
+        //        //    "type": "Catalyst.Common.Interfaces.IO.Observers.IRpcRequestObserver, Catalyst.Common"
+        //        //}
+        //    ]
+        //},
         {
             "type": "Catalyst.Node.Core.P2P.PeerClient",
             "services": [
